# home-exercise-2048

./: .gitignore  .markdownlint.json  AGENTS.md  README.md  main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: game_engine.py
backend/src/game2048/: __init__.py  ai.py  api.py  config.py  engine.py  llm.py  main.py  utils.py
backend/tests/: test_ai.py  test_api.py  test_engine.py  test_llm.py  test_utils.py
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Board.tsx  Controls.tsx  Scoreboard.tsx  Tile.tsx
frontend/src/components/Board/: Board.css  Board.tsx
frontend/src/components/Button/: Button.css  Button.tsx
frontend/src/components/Controls/: Controls.css  Controls.tsx
frontend/src/components/Scoreboard/: Scoreboard.css  Scoreboard.tsx
frontend/src/components/Tile/: Tile.css  Tile.tsx
frontend/src/hooks/: useGame.ts
frontend/src/styles/: global.css
tests/: test_game_engine.py
